# pokemon-gold-randomizer

./: .gitignore  CMakeLists.txt  Makefile  README.md
mappings/: gen2_english
src/: constants.h  evolution.h  item.cpp  item.h  items.cpp  items.h  main.cpp  maind.cpp  move.h  pokemon.cpp  pokemon.h  pokemon_stats.h  randomization_options.h  rom.cpp  rom.h
